# sql-compare

./: LICENCE  pyproject.toml
sqlite-compare/: sqlite-compare.py
