[tool.poetry]
name = "sqlite-compare"
version = "0.1.0"
description = "The SQLite Database Comparison Tool is a graphical application to compare two SQLite databases"
authors = ["Leif Kasueschke <mail@kasueschke.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
